:art: fix(NLW-296-o-footer): spacing between icon

--- a/src/components/organisms/Footer/index.scss
+++ b/src/components/organisms/Footer/index.scss
@@ -137,14 +137,13 @@
         display: flex;
         flex-wrap: wrap;
         margin-top: rem(16);
-        max-width: rem(170);
         padding: 0;
 
         &_item {
           margin-bottom: rem(6);
 
-          &:not(:last-child){
-            margin-right: rem(16);
+          &:not(:last-child) {
+            margin-right: rem(20);
           }
         }
       }
